--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Template::Plugin::JA::Fold
 
+0.02    Wed Jun 15 01:17:00 2011
+        - fixed document
+
 0.01    Tue Nov  9 21:04:09 2010
         - original version
