--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Template::Plugin::JA::Fold
 
+0.03    Mon Oct 22 03:10:00 2012
+        - Switch to Module::Build
+
 0.02    Wed Jun 15 01:17:00 2011
         - fixed document
 
