--- a/README
+++ b/README
@@ -1,27 +1,22 @@
-This is Perl module Template::Plugin::JA::Fold.
+NAME
+    Template::Plugin::JA::Fold - Template plugin that interface to
+    Lingua::JA::Fold
 
-INSTALLATION
+SYNOPSIS
+      [% USE JA::Fold %]
+      [% foo | fold(10,'full-width') | html | html_line_break %]
 
-Template::Plugin::JA::Fold installation is straightforward. If your CPAN shell is set up,
-you should just be able to do
+DESCRIPTION
+    Template::Plugin::JA::Fold is plugin that interface to Lingua::JA::Fold
+    for Template-Toolkit
 
-    % cpan Template::Plugin::JA::Fold
+AUTHOR
+    Hideaki Ohno <hide.o.j55 {at} gmail.com>
 
-Download it, unpack it, then build it as per the usual:
+SEE ALSO
+    Template Template::Plugin Lingua::JA::Fold
 
-    % perl Makefile.PL
-    % make && make test
+LICENSE
+    This library is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
-Then install it:
-
-    % make install
-
-DOCUMENTATION
-
-Template::Plugin::Fold documentation is available as in POD. So you can do:
-
-    % perldoc Template::Plugin::JA::Fold
-
-to read the documentation online with your favorite pager.
-
-Hideaki Ohno
